# kp2bw

./: .dockerignore  .dprint.jsonc  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  TROUBLESHOOTING.md  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/actions/setup-bw/: action.yml
.github/workflows/: AGENTS.md  autofix.yml  codegen-check.yml  integration-docker.yml  pages.yml  pr-comment-bot.yml  publish-stubs.yml  publish.yml  windows-bw-cmd.yml
.opencode/state/performance-bw-serve-transport/: prd.json  progress.txt
.zed/: settings.json
docs/: AGENTS.md  README.md  eslint.config.js  package.json  svelte.config.js
docs/src/: app.html
docs/src/lib/: planner.spec.ts  planner.ts  preview-fixture.json
docs/src/lib/components/: CommandBox.svelte  HelpMark.svelte  PathTable.svelte  PlannerOptions.svelte  TreeLegend.svelte
docs/src/routes/: +layout.svelte  +page.svelte
docs/src/routes/docs/: +page.svelte
scripts/: .gitignore  AGENTS.md  generate-bw-types.sh  package.json  pr-comment.mjs  stubs-version.mjs  tsconfig.json  uv-version.mjs
specs/: performance-bw-serve-transport.md  vault-management-api.json
src/kp2bw/: AGENTS.md  __init__.py  _bw_api_types.py  _console.py  bitwardenclient.py  bw_import.py  bw_serve.py  bw_types.py  cli.py  convert.py  exceptions.py  otp.py  uri_mapping.py
tests/: AGENTS.md  Dockerfile.test  Dockerfile.vaultwarden  _snapshot.py  bw_serve_attachment_test.py  bw_serve_batch_test.py  bw_serve_bw_missing_test.py  bw_serve_command_test.py  bw_serve_sanitization_test.py  bw_serve_teardown_test.py  bw_serve_timeout_test.py  cli_env_test.py  cli_logging_test.py  cli_version_test.py  convert_ref_resolution_test.py  convert_resilience_test.py  convert_update_test.py  docker-compose.yml  e2e_vaultwarden_test.py  migrate_uris_test.py  otp_test.py  protect_edits_test.py  smoke_test.py  strip_ids_test.py  stubs_smoke_test.py  test_script_adapters.py  uri_mapping_test.py  windows_bw_cmd_smoke.py
tests/__snapshots__/: vault_after_update.json  vault_initial.json
tests/fixtures/: .gitignore
tests/fixtures/vaultwarden-certs/: cert.pem  key.pem
tests/fixtures/vaultwarden-data/: db.sqlite3  rsa_key.pem
typings/pykeepass/: __init__.pyi  attachment.pyi  baseelement.pyi  entry.pyi  exceptions.pyi  group.pyi  pykeepass.pyi
