[project]
name = "kp2bw"
version = "1.1.0"
description = "Imports and existing KeePass db with REF fields into Bitwarden"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Kaj Kowalski", email = "info@kajkowalski.nl" }]
dependencies = [
  "pykeepass>=4.1.1.post1",
]

[project.urls]
Repository = "https://github.com/kjanat/kp2bw"

[project.scripts]
kp2bw = "kp2bw.cli:main"

[dependency-groups]
dev = [
  "basedpyright>=1.38.1",
  "ruff>=0.15.2",
  "tombi>=0.7.32",
  "ty>=0.0.18",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
preview = true
target-version = "py314"
