[project]
name            = "kp2bw"
version         = "3.0.0"
description     = "Imports and existing KeePass db with REF fields into Bitwarden"
readme          = "README.md"
requires-python = ">=3.14"
keywords        = ["bitwarden", "cli", "keepass", "migration", "password-manager"]
classifiers     = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies    = ["httpx>=0.28.0", "pykeepass>=4.1.1.post1", "rich>=13.0.0"]

[[project.authors]]
name  = "Kaj Kowalski"
email = "info@kajkowalski.nl"

[project.urls]
Changelog  = "https://github.com/kjanat/kp2bw/blob/master/CHANGELOG.md"
Issues     = "https://github.com/kjanat/kp2bw/issues"
Repository = "https://github.com/kjanat/kp2bw"

[project.scripts]
kp2bw = "kp2bw.cli:main"

[dependency-groups]
dev     = [
  { include-group = "codegen" },
  { include-group = "lint" },
  { include-group = "stubs" },
  { include-group = "test" },
]
codegen = ["datamodel-code-generator[ruff]>=0.31"]
lint    = [
  "basedpyright>=1.38.1",
  "ruff>=0.15.2",
  "tombi>=0.7.32",
  "ty>=0.0.18",
]
stubs   = ["pykeepass-stubs"]
test    = [
  "coverage>=7.13.4",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
]

[build-system]
requires      = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath         = "."
venv             = ".venv"
typeCheckingMode = "strict"
pythonVersion    = "3.14"

[tool.ruff]
preview        = true
target-version = "py314"

[tool.uv.sources]
pykeepass-stubs = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = []
